Arreglados algunos bugs. Aplicación versión 1.0.7.